# miner-godot4

./: icon.png.import  project.godot
bevy-miner/: Cargo.toml
bevy-miner/src/: .chunks.rs.rustfmt  chunks.rs  main.rs
src/: Game.gdshader  Game.tscn
src/Items/: Item.gd  ItemTypes.gd
src/Player/: Player.gd  Player.tscn  digger.png.import
src/Scenes/Player/: InventoryManager.gd  Player.gd  Player.tscn  digger.png.import
src/Scenes/World/: World.tscn  spritesheet.png.import
src/World/: World.tscn  spritesheet.png.import
src/ui/: ui.png.import
